--- a/travel-planner-app/package.json
+++ b/travel-planner-app/package.json
@@ -3,10 +3,15 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "test": "jest",
+        "test": "jest --no-cache --watchAll --detectOpenHandles --forceExit",
         "start": "node src/server/server.js",
         "build": "webpack --config webpack.prod.js",
         "dev": "webpack-dev-server  --config webpack.dev.js --open"
+    },
+    "jest": {
+        "moduleNameMapper": {
+            "axios": "axios/dist/node/axios.cjs"
+        }
     },
     "keywords": [],
     "author": "",
@@ -23,6 +28,7 @@
     "devDependencies": {
         "@babel/core": "^7.5.4",
         "@babel/preset-env": "^7.5.4",
+        "axios": "^1.4.0",
         "babel-loader": "^8.0.6",
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^5.0.1",
